Fix black header icon by adding fill=none and stroke attributes

--- a/index.html
+++ b/index.html
@@ -1481,7 +1481,7 @@
                         <div class="chat-header">
                             <div class="header-left">
                                 <span class="header-icon-brand" title="AIコンシェルジュ">
-                                    <svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="9"/><path d="M8 14s1.5 2 4 2 4-2 4-2"/><line x1="9" y1="9" x2="9.01" y2="9"/><line x1="15" y1="9" x2="15.01" y2="9"/></svg>
+                                    <svg viewBox="0 0 24 24" style="fill:none; stroke:currentColor; stroke-width:2px;"><circle cx="12" cy="12" r="9"/><path d="M8 14s1.5 2 4 2 4-2 4-2"/><line x1="9" y1="9" x2="9.01" y2="9"/><line x1="15" y1="9" x2="15.01" y2="9"/></svg>
                                 </span>
                                 <span class="header-title">Concierge</span>
                             </div>
@@ -1515,6 +1515,7 @@
                                 おすすめ
                             </span>
                         </div>
+
 
                         <div id="chat-messages">
                             <!-- Helper / Introduction -->
