Update Robot icon to rounded cute design

--- a/index.html
+++ b/index.html
@@ -1482,11 +1482,11 @@
                             <div class="header-left">
                                 <span class="header-icon-brand" title="AIコンシェルジュ">
                                     <svg viewBox="0 0 24 24" style="fill:none; stroke:currentColor; stroke-width:2px; stroke-linecap:round; stroke-linejoin:round;">
-                                        <rect x="3" y="11" width="18" height="10" rx="2" />
-                                        <circle cx="12" cy="5" r="2" />
-                                        <path d="M12 7v4" />
-                                        <line x1="8" y1="16" x2="8" y2="16" />
-                                        <line x1="16" y1="16" x2="16" y2="16" />
+                                        <rect x="4" y="10" width="16" height="12" rx="6" />
+                                        <circle cx="12" cy="5" r="1.8" />
+                                        <path d="M12 7v3" />
+                                        <circle cx="9" cy="15" r="1.5" />
+                                        <circle cx="15" cy="15" r="1.5" />
                                     </svg>
                                 </span>
                                 <span class="header-title">Concierge</span>
@@ -1499,7 +1499,7 @@
                                     <svg viewBox="0 0 24 24"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/><circle cx="12" cy="12" r="3"/></svg>
                                 </button>
                                 <button class="header-btn" id="avatar-toggle" title="アバター表示切替">
-                                    <svg viewBox="0 0 24 24"><rect x="3" y="11" width="18" height="10" rx="2" /><circle cx="12" cy="5" r="2" /><path d="M12 7v4" /><line x1="8" y1="16" x2="8" y2="16" /><line x1="16" y1="16" x2="16" y2="16" /></svg>
+                                    <svg viewBox="0 0 24 24"><rect x="4" y="10" width="16" height="12" rx="6" /><circle cx="12" cy="5" r="1.8" /><path d="M12 7v3" /><circle cx="9" cy="15" r="1.5" /><circle cx="15" cy="15" r="1.5" /></svg>
                                 </button>
                                 <button class="header-btn" id="tts-toggle" title="音声読み上げ">
                                     <svg viewBox="0 0 24 24"><polygon points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"/><path d="M19.07 4.93a10 10 0 0 1 0 14.14M15.54 8.46a5 5 0 0 1 0 7.07"/></svg>
