--- a/mobile-test.html
+++ b/mobile-test.html
@@ -202,6 +202,24 @@
     ================================================================
     -->
     <script src="assets/js/widget.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            window.initConciergeWidget({
+                brandName: "Miryu Burger",
+                businessType: "restaurant",
+                hours: { open: 11, close: 22 },
+                themeColor: "#d32f2f", // Aligned with branding
+                selectors: {
+                    productCard: ".menu-card",
+                    productName: ".menu-title",
+                    productDesc: ".menu-description",
+                    productPrice: ".menu-price",
+                    productImage: "img",
+                    productTags: ".menu-tags li"
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
