Fix microphone button issues and bump version to v7.0

--- a/mobile-test.html
+++ b/mobile-test.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <!-- FontAwesome (Optional for Icons) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css?v=6.3">
 </head>
 
 <body>
@@ -201,7 +201,7 @@
     CONCIERGE WIDGET LOGIC
     ================================================================
     -->
-    <script src="assets/js/widget.js"></script>
+    <script src="assets/js/widget_v6.js?v=7.0"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             window.initConciergeWidget({
