--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     CONCIERGE WIDGET LOGIC
     ================================================================
     -->
-    <script src="assets/js/widget.js"></script>
+    <script src="assets/js/widget_v6.js?v=7.0"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             window.initConciergeWidget({
