--- a/mobile-test.html
+++ b/mobile-test.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Miryu Burger - Future of Taste</title>
+    <title>BUN BUN BURGER - Future of Taste</title>
     <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@400;500;700&family=Outfit:wght@400;700&display=swap"
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-    <!-- Miryu Burger Site Header -->
+    <!-- BUN BUN BURGER Site Header -->
     <header>
         <div class="container header-inner">
             <div class="brand">
                 <span class="brand-icon">🍔</span>
-                <span>Miryu Burger</span>
+                <h1>BUN BUN BURGER</h1>
             </div>
             <nav>
                 <ul>
@@ -38,7 +38,7 @@
         <div class="container hero-inner">
             <div class="hero-text">
                 <h1>Taste the Future.<br>Experience Classic.</h1>
-                <p>伝統の味と、最新テクノロジーの融合。<br>Miryu Burgerで、新しい食体験を。</p>
+                <p>伝統の味と、最新テクノロジーの融合。<br>BUN BUN BURGERで、新しい食体験を。</p>
                 <a href="#menus" class="cta-button">View Menu</a>
             </div>
             <div class="hero-image">
@@ -57,10 +57,11 @@
                 <!-- Item 1 -->
                 <article class="menu-card" data-menu-card>
                     <div class="menu-thumb">
-                        <img src="assets/miryu-burger/signature-burger.png" alt="Miryu Signature Burger" loading="lazy">
+                        <img src="assets/miryu-burger/signature-burger.png" alt="BUN BUN Signature Burger"
+                            loading="lazy">
                     </div>
                     <div class="menu-content">
-                        <h3 class="menu-title">Miryu Signature Burger</h3>
+                        <h3 class="menu-title">BUN BUN Signature Burger</h3>
                         <p class="menu-description">和牛パティ2枚と特製スパイシーソースの看板バーガー。圧倒的満足感。</p>
                         <p class="menu-price">¥680〜</p>
                         <ul class="menu-tags">
@@ -133,10 +134,10 @@
                 <!-- Item 6 -->
                 <article class="menu-card" data-menu-card>
                     <div class="menu-thumb">
-                        <img src="assets/miryu-burger/cola-zero.png" alt="Miryu Cola Zero" loading="lazy">
+                        <img src="assets/miryu-burger/cola-zero.png" alt="BUN BUN Cola Zero" loading="lazy">
                     </div>
                     <div class="menu-content">
-                        <h3 class="menu-title">Miryu Cola Zero</h3>
+                        <h3 class="menu-title">BUN BUN Cola Zero</h3>
                         <p class="menu-description">カロリーゼロでも味は濃厚。オリジナルスパイス配合のクラフトコーラ。</p>
                         <p class="menu-price">¥250〜</p>
                         <ul class="menu-tags">
@@ -194,7 +195,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Miryu Burger Inc. all rights reserved.</p>
+        <p>&copy; 2025 BUN BUN BURGER Inc. all rights reserved.</p>
     </footer>
     <!-- 
     ================================================================
@@ -205,7 +206,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             window.initConciergeWidget({
-                brandName: "Miryu Burger",
+                brandName: "BUN BUN BURGER",
                 businessType: "restaurant",
                 hours: { open: 11, close: 22 },
                 themeColor: "#d32f2f", // Aligned with branding
