fix: resolve duplicate images and add missing drink items

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </article>
                 <article class="menu-card" data-menu-card>
                     <div class="menu-thumb">
-                        <img src="assets/bun-bun-burger/bun_bun_fries_1765726688593.png" alt="CHEESE BUN FRIES"
+                        <img src="assets/bun-bun-burger/cheese_bun_fries_1765727271119.png" alt="CHEESE BUN FRIES"
                             loading="lazy">
                     </div>
                     <div class="menu-content">
@@ -273,7 +273,7 @@
                 </article>
                 <article class="menu-card" data-menu-card>
                     <div class="menu-thumb">
-                        <img src="assets/miryu-burger/cola-zero.png" alt="COLA BUN" loading="lazy">
+                        <img src="assets/bun-bun-burger/cola_bun_drink_1765727291248.png" alt="COLA BUN" loading="lazy">
                     </div>
                     <div class="menu-content">
                         <h3 class="menu-title">COLA BUN</h3>
@@ -282,6 +282,36 @@
                         <div class="menu-calories">140 kcal</div>
                         <ul class="menu-tags">
                             <li>Drink</li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="menu-card" data-menu-card>
+                    <div class="menu-thumb">
+                        <img src="assets/bun-bun-burger/homemade_lemo_bun_1765727308327.png" alt="HOMEMADE LEMO BUN"
+                            loading="lazy">
+                    </div>
+                    <div class="menu-content">
+                        <h3 class="menu-title">HOMEMADE LEMO BUN</h3>
+                        <p class="menu-description">自家製はちみつレモン。スッキリした甘さ。</p>
+                        <p class="menu-price">¥380</p>
+                        <div class="menu-calories">180 kcal</div>
+                        <ul class="menu-tags">
+                            <li>Fresh</li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="menu-card" data-menu-card>
+                    <div class="menu-thumb">
+                        <img src="assets/bun-bun-burger/craft_ginger_bun_1765727325268.png" alt="CRAFT GINGER BUN"
+                            loading="lazy">
+                    </div>
+                    <div class="menu-content">
+                        <h3 class="menu-title">CRAFT GINGER BUN</h3>
+                        <p class="menu-description">生姜の辛味が効いた大人のジンジャーエール。</p>
+                        <p class="menu-price">¥380</p>
+                        <div class="menu-calories">160 kcal</div>
+                        <ul class="menu-tags">
+                            <li>Spicy</li>
                         </ul>
                     </div>
                 </article>
