Update BUN BUN SET image

--- a/index.html
+++ b/index.html
@@ -324,8 +324,7 @@
             <div class="menu-grid">
                 <article class="menu-card" data-menu-card>
                     <div class="menu-thumb">
-                        <img src="assets/bun-bun-burger/bun_bun_classic_burger_1765726604373.png" alt="BUN BUN SET"
-                            loading="lazy">
+                        <img src="assets/bun-bun-burger/bun_bun_set_1765730147994.png" alt="BUN BUN SET" loading="lazy">
                     </div>
                     <div class="menu-content">
                         <h3 class="menu-title">BUN BUN SET</h3>
