--- a/mobile-test.html
+++ b/mobile-test.html
@@ -393,7 +393,10 @@
                 </article>
                 <article class="faq-item" data-faq-item>
                     <h3 class="faq-question">席の予約は可能ですか？</h3>
-                    <p class="faq-answer">申し訳ございません。当店は完全フリーシーティング制となっております。</p>
+                    <p class="faq-answer">はい、可能です。AIコンシェルジュからご予約いただけます。<br>
+                        <button class="cta-button" style="margin-top: 10px; padding: 8px 16px; font-size: 0.9em;"
+                            onclick="window.triggerQuickAction('reservation')">来店予約する</button>
+                    </p>
                 </article>
             </div>
         </section>
